--- a/backendd/index.css
+++ b/backendd/index.css
@@ -6,6 +6,7 @@
 }
 
 body {
+    background-image: url("https://images.unsplash.com/photo-1614849963640-9cc74b2a826f?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,12 +14,11 @@ body {
     background-color: #f8f8f8;
     padding: 20px;
 }
-
 .container {
-    background: white;
+    background: rgba(255, 255, 255, 0.784);
     padding: 30px;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
     max-width: 500px;
     width: 100%;
     text-align: center;
@@ -26,12 +26,13 @@ body {
 
 .header {
     font-size: 2em;
-    color: firebrick;
+    color: #3F7D58;
     margin-bottom: 20px;
     font-weight: 700;
 }
 
 .flex {
+    color: #3F7D58;
     display: flex;
     align-items: center;
     gap: 10px;
@@ -50,23 +51,23 @@ body {
     width: 100%;
     text-align: left;
     font-weight: 600;
-    color: firebrick;
+    color: #3F7D58;
     margin-bottom: 5px;
 }
 
 .form {
     width: 100%;
     padding: 12px;
-    border: 2px solid firebrick;
+    border: 2px solid rgb(131, 230, 207);
     border-radius: 5px;
     background: transparent;
-    color: firebrick;
+    color: rgb(0, 73, 56);
     font-size: 1em;
     transition: all 0.3s ease;
 }
 
 .form:focus {
-    border-color: #8b0000;
+    border-color:#3F7D58;
     outline: none;
 }
 
@@ -81,7 +82,7 @@ body {
 
 .button {
     padding: 12px 30px;
-    background: firebrick;
+    background:#3F7D58;
     color: white;
     border: none;
     border-radius: 25px;
@@ -91,13 +92,14 @@ body {
 }
 
 .button:hover {
-    background: #8b0000;
+    background: #3F7D58;
+    transform: scale(1.05);
 }
 
 .message {
-    text-align: center;
+    text-align: left;
     color: firebrick;
-    margin: 15px 0;
+    margin: 10px ;
     font-weight: 600;
 }
 
