--- a/backendd/mgbook.css
+++ b/backendd/mgbook.css
@@ -2,21 +2,54 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #f8f9fa;
-    color: #333;
+    color: #000000;
     margin: 0;
     padding: 20px;
     display: flex;
     justify-content: center;
 }
+.navbar {
+    width: 100%;
+    background-color: #6A9C89;
+    color: white;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    position: fixed;
+    top: 0;
+    left: 0;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.navbar h2 {
+    color: #FFA725;
+    margin: 0;
+    font-size: 22px;
+    text-transform: uppercase;
+}
+
+.navbar a {
+    text-decoration: none;
+    color: white;
+    background-color: #6A9C89;
+    padding: 10px 15px;
+    border-radius: 5px;
+    
+}
+
+.navbar a:hover {
+    background-color: #3c584d;
+}
 
 .container {
     width: 100%;
-    max-width: 800px;
     background: #ffffff;
-    padding: 20px;
+    padding: 60px;
     border-radius: 12px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    text-align: center;
+    text-align: left
+    
 }
 
 h1, h2 {
@@ -30,15 +63,8 @@ h1, h2 {
     margin-bottom: 10px;
     color: #34495e;
 }
-
-.form-input {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
 .input {
-    width: 48%;
+    width: 30%;
     margin-bottom: 10px;
 }
 
@@ -50,13 +76,12 @@ h1, h2 {
 }
 
 .center {
-    text-align: center;
+    text-align: left;
     margin: 20px 0;
 }
 
 .button {
     padding: 10px 15px;
-    background-color: #3498db;
     color: white;
     border: none;
     border-radius: 6px;
@@ -111,13 +136,16 @@ button:hover {
 
 
 button.delete {
+    width: 50px;
+    margin-top: 10px;
     background-color: #dc3546f4;
     color: white;
 }
 .back-button {
+    margin: 10px;
     display: inline-block;
     padding: 10px 20px;
-    background: linear-gradient(135deg, #2b2b2b, #8b8b8b);
+    background-color: #3c9451;
     color: rgb(255, 255, 255);
     text-decoration: none;
     border-radius: 10px;
